@@ -988,11 +988,11 @@ macro(_elements_use_other_projects)
         if(${other_project}_FOUND)
           break()
         else()
-          set(suffixes)
-          get_installed_versionless_project_suffixes(${other_project} ${BINARY_TAG} ${SGS_SYSTEM} suffixes)
+          set(suffixes2)
+          get_installed_versionless_project_suffixes(${other_project} ${BINARY_TAG} ${SGS_SYSTEM} suffixes2)
           find_package(${other_project} ${other_project_cmake_version} QUIET
                        HINTS ${pth}
-                       PATH_SUFFIXES ${suffixes})
+                       PATH_SUFFIXES ${suffixes2})
           if(${other_project}_FOUND)
             break()
           endif()
