@@ -1,3 +1,10 @@
+2015-09-22  Hubert Degaudenzi  <Hubert.Degaudenzi@unige.ch>
+
+	* setup.py: release of version 1.12.3
+	- update to the cmake library of the Elements 3.7.3 version
+    - critical bug fix to locate Elements in the release 
+      area (/opt/euclid)
+	
 2015-08-18  Hubert Degaudenzi  <Hubert.Degaudenzi@unige.ch>
 
 	* setup.py: release of version 1.12.2 
